# RustChat

./: .gitignore  Dockerfile  README.md
chat/client/: .gitignore
chat/server/: Cargo.toml
chatroom/: Cargo.toml
chatroom/client/: Cargo.toml
chatroom/client/src/: client.rs  main.rs
chatroom/client/src/protocol/: handler.rs  mod.rs
chatroom/server/src/: main.rs  server.rs
chatroom/server/src/protocol/: handler.rs  mod.rs
chatroom/src/: lib.rs  logo.rs  logo.txt  main.rs  utils.rs
chatroom/src/audio/: Cargo.toml
chatroom/src/audio/src/: audio.rs  lib.rs
chatroom/src/client/: client.rs  cmain.rs  help.txt
chatroom/src/client/protocol/: handler.rs  mod.rs
chatroom/src/server/: server.rs  smain.rs
chatroom/src/server/protocol/: handler.rs  mod.rs  utils.rs
examples/: Cargo.toml
exercise/UDP/client/: Cargo.toml
exercise/UDP/client/src/: main.rs
exercise/UDP/server/src/: main.rs
